src/test/deca/context/valid/auto/valid/test52.deca
{
int x1 = (6 - 2) / (1338 % 8) / (-2);
boolean z = (81689.6052 <= 28163);
boolean x;
int y = (-7) - (77808 / 8974);
float b;
int a = (264 - 1) - (12 * 9);
int x4;
while ((77808 != 0))
{
	x4 = (-y) - (0 / 7) * (-6431) * (6398 * 2) * (1338 * 6);
	println((-x4) / (9 / 81689.6052) / (y * 7) + (8 * 7), "Sasuki");
	print();
	println((-1338) + (6645 + a) + (-9), "رضوان", "Sasuki", "groupe 53");
}
}
